2008-07-10  Francois Dumont  <dums@users.sourceforge.net>

	* src/num_put_float.cpp: Use an union based technique to find out
	the sign of floating point values. It will maybe replace use of
	platform specific functions in a future version.

2008-07-02  Francois Dumont  <dums@users.sourceforge.net>

	* configure.bat: After a very interesting debate the consesus
	is to put configure scripts in root folder.

	* stlport/stl/_string_sum_methods.h: Bug report #2003308,
	compilation error with _STLP_USE_TEMPLATE_EXPRESSION.
	Regression due to remove of POD type support in basic_string
	implementation.

2008-06-26  Francois Dumont  <dums@users.sourceforge.net>

	* stlport/stl/_fstream.c: Consider read file failure in
	_M_underflow_aux method to avoid infinite looping on some
	platforms. Thanks Pawel Sikora.
	
2008-06-26  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* build/Makefiles/gmake/unix/rules-install-so.mak: do
	install-headers tags when make install or install-release-shared.

2008-06-24  Francois Dumont  <dums@users.sourceforge.net>

	* build/Makefiles/gmake: Cygwin/MinGW upgrade, now build
	without referencing libstdc++.

	* stlport/stl/_threads.h: Move definition of __stl_atomic_t next
	to definition of atomic operations to guaranty coherency.

2008-06-18  Francois Dumont  <dums@users.sourceforge.net>

	* build: configure.bat moved to build folder. lib/Makefile,
	test/unit/Makefile removed from SVN, now generated by configure
	scripts. Under GNU make use include rather than link to
	reference the right make file, link seems not supported by
	Cygwin/MinGW make. Remove default value of STLPORT_DIR,
	already set in internal make files and moreover the absolute
	path generated in the script leads to trouble under Cygwin/MinGW.

	* src/num_get_float.cpp: Use an union to generate double value
	from 64 bits int to avoid gcc type-punned pointer warning.

2008-06-16  Petr Ovtchenkov  <complement@users.sourceforge.net>
